--- a/notebooks_mri/tmap.ipynb
+++ b/notebooks_mri/tmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b5e07f76",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "603f942a",
    "metadata": {},
    "outputs": [
@@ -76,28 +76,123 @@
       "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.026671 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.025604 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.0248 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.024334 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.029039 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.02814 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.001641 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.105947 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.002132 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.004398 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.002002 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.003123 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.00189 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001746 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/psc.dscalar.nii was 0.034025 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/psc.dscalar.nii was 0.028971 seconds.\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Charting/HistogramChartingLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Charting/LinesChartingLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Charting/DynLinesChartingLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Charting/MatrixChartLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Charting_Loading.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Charting_History.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_horiz.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_horiz.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_horiz.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_horiz.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_horiz.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_vert.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Chart_Layers/Overlay_Toolbox_vert.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/HistogramChartingLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/LinesChartingLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/DynLinesChartingLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/MatrixChartLayers.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Layers/Overlay_Toolbox_vert.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
+      "\n",
+      "\n",
+      "SEVERE: Failed to load type: Image Resource file: qrc:/HelpFiles/Overlay_Toolbox/Layers/Overlay_Toolbox_vert.png\n",
+      "Method: virtual QVariant caret::HelpTextBrowser::loadResource(int, const QUrl &)\n",
+      "Location: HelpViewerDialog.cxx:926\n",
       "\n"
      ]
     },
@@ -107,7 +202,7 @@
        "CompletedProcess(args=['wb_view', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/psc.dscalar.nii'], returncode=0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "51ec8d7a",
    "metadata": {},
    "outputs": [
@@ -157,7 +252,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_8827/1645881607.py:64: RuntimeWarning: Mean of empty slice\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_20090/520566070.py:64: RuntimeWarning: Mean of empty slice\n",
       "  mean_data = np.nanmean(condition_data, axis=0, keepdims=True)\n",
       "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/numpy/lib/_nanfunctions_impl.py:2019: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
       "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
@@ -181,7 +276,7 @@
     "        surf_pial.append(os.path.join(baseDir,surfacewbDir, f's{sn}', f's{sn}.{hem}.pial.32k.surf.gii'))\n",
     "\n",
     "    for cond in conds:\n",
-    "        datafiles = [os.path.join(baseDir, f'glm{glm}', f's{sn}', f'con_{cond}.nii')]\n",
+    "        datafiles = [os.path.join(baseDir, f'glm{glm}', f's{sn}', f'con_{cond}_smooth8mm.nii')]\n",
     "        datafiles.append(os.path.join(baseDir, f'glm{glm}', f's{sn}', f'con_constant.nii'))\n",
     "        \n",
     "        # Map a Nifti to the surface of left hemisphere\n",
@@ -250,6 +345,91 @@
     "\n",
     "nb.save(cifti_img, os.path.join(analysisDir, f'psc.dscalar.nii'))\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc1856b8",
+   "metadata": {},
+   "source": [
+    "# Smoothing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "eef88552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s101/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s101/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s101/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s102/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s102/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s102/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s103/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s103/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s103/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s104/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s104/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s104/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s106/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s106/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s106/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s107/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s107/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s107/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s108/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s108/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s108/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s109/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s109/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s109/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s110/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s110/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s110/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s111/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s111/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s111/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s112/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s112/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s112/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s113/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s113/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s113/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s114/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s114/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s114/con_bi_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s115/con_lhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s115/con_rhand_smooth6mm.nii\n",
+      "Saved: /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/glm1/s115/con_bi_smooth6mm.nii\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, glob\n",
+    "from nilearn import image\n",
+    "import nibabel as nb\n",
+    "\n",
+    "glm = 1\n",
+    "conds = ['lhand', 'rhand', 'bi']\n",
+    "sn_list = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
+    "all_data = []\n",
+    "scalar_labels = []\n",
+    "\n",
+    "fwhm_mm = 6 # in mm\n",
+    "for sn in sn_list:\n",
+    "    for cond in conds:\n",
+    "        datafile = [os.path.join(baseDir, f'glm{glm}', f's{sn}', f'con_{cond}.nii')]\n",
+    "        sm = image.smooth_img(datafile, fwhm=fwhm_mm)\n",
+    "        out = os.path.join(baseDir, f'glm{glm}', f's{sn}', f\"con_{cond}_smooth{fwhm_mm}mm.nii\")\n",
+    "        nb.save(sm[0], out)\n",
+    "        print(\"Saved:\", out)\n",
     "\n"
    ]
   },
