--- a/notebooks_mri/extract_data.ipynb
+++ b/notebooks_mri/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0e08fef6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "74e21717",
    "metadata": {},
    "outputs": [
@@ -344,10 +344,21 @@
     "            39, 38, 37, 36, 41, 40,\n",
     "            45, 44, 43, 42, 47, 46]\n",
     "\n",
+    "cond_num_lhem_bimanual = [0, 1, 2, 3, 4, 5,\n",
+    "                          9, 8, 7, 6, 11, 10,\n",
+    "                          30, 24, 18, 12, 42, 36,\n",
+    "                          31, 25, 19, 13, 43, 37,\n",
+    "                          32, 26, 20, 14, 44, 38,\n",
+    "                          33, 27, 21, 15, 45, 39,\n",
+    "                          34, 28, 22, 16, 46, 40,\n",
+    "                          35, 29, 23, 17, 47, 41]\n",
+    "\n",
+    "\n",
     "# Create mapping dictionary\n",
     "extrinsic_to_intrinsic = dict(zip(extrinsic_names, intrinsic_names))\n",
     "extrinsic_to_number = dict(zip(extrinsic_names, cond_num))\n",
     "extrinsic_to_extrinsic_ordered_number = dict(zip(extrinsic_names, cond_num_extrinsic_ordered))\n",
+    "extrinsic_to_lhem_bimanual_number = dict(zip(extrinsic_names, cond_num_lhem_bimanual))\n",
     "\n",
     "for k, r in enumerate(region_labels):\n",
     "    for j, h in enumerate(hem):\n",
@@ -357,6 +368,7 @@
     "        cond_intrinsic_vec = []\n",
     "        cond_num_vec = []\n",
     "        cond_num_vec_extrinsic = []\n",
+    "        cond_num_lhem_bimanual_vec = []\n",
     "        part_vec = []\n",
     "        subject = []\n",
     "        for i, sn in enumerate(sn_list):\n",
@@ -411,6 +423,7 @@
     "            # Convert conditions vector to numbers\n",
     "            cond_num_vec.append(np.array([extrinsic_to_number[cond] for cond in conds]))\n",
     "            cond_num_vec_extrinsic.append(np.array([extrinsic_to_extrinsic_ordered_number[cond] for cond in conds]))\n",
+    "            cond_num_lhem_bimanual_vec.append(np.array([extrinsic_to_lhem_bimanual_number[cond] for cond in conds]))\n",
     "\n",
     "            print(f'{region_names[k]}, hem{h}, s{sn}')\n",
     "\n",
@@ -431,8 +444,10 @@
     "                  cond_intrinsic_vec=cond_intrinsic_vec,\n",
     "                  cond_num_vec=cond_num_vec,\n",
     "                  cond_num_vec_extrinsic=cond_num_vec_extrinsic,\n",
+    "                  cond_num_lhem_bimanual_vec=cond_num_lhem_bimanual_vec,\n",
     "                  part_vec=part_vec,\n",
     "                  subject=subject)\n",
+    "\n",
     "\n"
    ]
   }
