--- a/notebooks_mri/RDMs.ipynb
+++ b/notebooks_mri/RDMs.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 164,
    "id": "0c5a36b6",
    "metadata": {},
    "outputs": [
@@ -108,6 +108,8 @@
     "conditions = ['rhand','lhand']\n",
     "df = {'sn':[], 'roi':[], 'hem':[], 'distances':[], 'mean_distance':[]}\n",
     "\n",
+    "RDMs_contra = {'region':[], 'labels': [], 'G': [], 'D': []}\n",
+    "\n",
     "plt.rcParams['font.family'] = 'Arial'\n",
     "plt.rcParams['font.size'] = 7\n",
     "fig, axes = plt.subplots(1, len(regions), figsize=(9,3))\n",
@@ -216,6 +218,10 @@
     "    G_hat_avg = np.mean(G_hat, axis=0)\n",
     "    D_avg = pcm.G_to_dist(G_hat_avg)\n",
     "    D_avg = np.sign(D_avg) * np.sqrt(np.abs(D_avg))\n",
+    "    RDMs_contra['region'].append(region)\n",
+    "    RDMs_contra['G'].append(G_hat_avg)\n",
+    "    RDMs_contra['D'].append(D_avg)\n",
+    "    RDMs_contra['labels'].append(labels)\n",
     "\n",
     "    vmin = -0.12\n",
     "    vmax = 0.12\n",
@@ -243,6 +249,9 @@
     "utils.please.make_it_pretty(ax)\n",
     "plt.savefig('/Users/aghavamp/Desktop/Projects/bimanual_wrist/figures/RDMs/avgdist_uni_contra.pdf', bbox_inches='tight')\n",
     "plt.show()\n",
+    "\n",
+    "RDMs_contra = pd.DataFrame(RDMs_contra)\n",
+    "RDMs_contra.to_pickle(os.path.join(analysisDir, 'RDMs_uni_contra.pkl'))\n",
     "\n"
    ]
   },
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 163,
    "id": "7c73bead",
    "metadata": {},
    "outputs": [
@@ -288,6 +297,7 @@
     "regions = ['M1','S1','PMd','PMv','SMA','SPLa','SPLp','V1']\n",
     "conditions = ['lhand','rhand']\n",
     "df = {'sn':[], 'roi':[], 'hem':[], 'distances':[], 'mean_distance':[]}\n",
+    "RDMs_ipsi = {'region':[], 'labels': [], 'G': [], 'D': []}\n",
     "\n",
     "plt.rcParams['font.family'] = 'Arial'\n",
     "plt.rcParams['font.size'] = 7\n",
@@ -397,6 +407,10 @@
     "    G_hat_avg = np.mean(G_hat, axis=0)\n",
     "    D_avg = pcm.G_to_dist(G_hat_avg)\n",
     "    D_avg = np.sign(D_avg) * np.sqrt(np.abs(D_avg))\n",
+    "    RDMs_ipsi['region'].append(region)\n",
+    "    RDMs_ipsi['G'].append(G_hat_avg)\n",
+    "    RDMs_ipsi['D'].append(D_avg)\n",
+    "    RDMs_ipsi['labels'].append(labels)\n",
     "\n",
     "    vmin = -0.12\n",
     "    vmax = 0.12\n",
@@ -424,7 +438,9 @@
     "utils.please.make_it_pretty(ax)\n",
     "plt.savefig('/Users/aghavamp/Desktop/Projects/bimanual_wrist/figures/RDMs/avgdist_uni_ipsi.pdf', bbox_inches='tight')\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "RDMs_ipsi = pd.DataFrame(RDMs_ipsi)\n",
+    "RDMs_ipsi.to_pickle(os.path.join(analysisDir, 'RDMs_uni_ipsi.pkl'))\n"
    ]
   },
   {
@@ -437,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 162,
    "id": "0bc9f3a2",
    "metadata": {},
    "outputs": [
@@ -553,6 +569,8 @@
     "regions = ['M1','S1','PMd','PMv','SMA','SPLa','SPLp','V1']\n",
     "df = {'sn':[], 'roi':[], 'hem':[], 'distances':[], 'mean_distance':[]}\n",
     "\n",
+    "RDMs_bi = {'region':[], 'labels': [], 'G': [], 'D': []}\n",
+    "\n",
     "plt.rcParams['font.family'] = 'Arial'\n",
     "plt.rcParams['font.size'] = 7\n",
     "for i_region, region in enumerate(regions):\n",
@@ -617,6 +635,10 @@
     "        G_hat_avg = np.mean(G_hat, axis=0)\n",
     "        D_avg = pcm.G_to_dist(G_hat_avg)\n",
     "        D_avg = np.sign(D_avg) * np.sqrt(np.abs(D_avg))\n",
+    "        RDMs_bi['region'].append(region)\n",
+    "        RDMs_bi['G'].append(G_hat_avg)\n",
+    "        RDMs_bi['D'].append(D_avg)\n",
+    "        RDMs_bi['labels'].append(labels[hem])\n",
     "\n",
     "        vmin = -0.18\n",
     "        vmax = 0.18\n",
@@ -651,7 +673,9 @@
     "utils.please.make_it_pretty(ax)\n",
     "plt.savefig('/Users/aghavamp/Desktop/Projects/bimanual_wrist/figures/RDMs/avgdist_bi.pdf', bbox_inches='tight')\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "RDMs_bi = pd.DataFrame(RDMs_bi)\n",
+    "RDMs_bi.to_pickle(os.path.join(analysisDir, 'RDMs_bi.pkl'))\n"
    ]
   },
   {
