--- a/notebooks_mri/RDMs.ipynb
+++ b/notebooks_mri/RDMs.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "7c73bead",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,8 @@
     "plt.show()\n",
     "\n",
     "RDMs_ipsi = pd.DataFrame(RDMs_ipsi)\n",
-    "RDMs_ipsi.to_pickle(os.path.join(analysisDir, 'RDMs_uni_ipsi.pkl'))\n"
+    "RDMs_ipsi.to_pickle(os.path.join(analysisDir, 'RDMs_uni_ipsi.pkl'))\n",
+    "\n"
    ]
   },
   {
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "id": "0bc9f3a2",
    "metadata": {},
    "outputs": [
@@ -675,7 +676,8 @@
     "plt.show()\n",
     "\n",
     "RDMs_bi = pd.DataFrame(RDMs_bi)\n",
-    "RDMs_bi.to_pickle(os.path.join(analysisDir, 'RDMs_bi.pkl'))\n"
+    "RDMs_bi.to_pickle(os.path.join(analysisDir, 'RDMs_bi.pkl'))\n",
+    "\n"
    ]
   },
   {
