--- a/notebooks_mri/RDMs.ipynb
+++ b/notebooks_mri/RDMs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "43044c59",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0bc9f3a2",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
     "        if hem == 'R':\n",
     "            cond_vec_tmp = d['cond_num_vec'][indices]\n",
     "        else:\n",
-    "            cond_vec_tmp = d['cond_num_lhem_bimanual_vec']\n",
+    "            cond_vec_tmp = d['cond_num_lhem_bimanual_vec'][indices]\n",
     "        data_tmp = d['beta_white'][indices]\n",
     "        part_tmp = d['part_vec'][indices]\n",
     "\n",
