--- a/notebooks_glmsingle/view_searchlight.ipynb
+++ b/notebooks_glmsingle/view_searchlight.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "41d00b08",
    "metadata": {},
    "outputs": [
@@ -76,63 +76,59 @@
       "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.03294 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.021806 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.024394 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.021534 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.027869 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.021532 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.005455 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.004111 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.034299 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.00431 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.005813 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.00114 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.004526 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001077 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_lhand_cortex.dscalar.nii was 0.034287 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_lhand_cortex.dscalar.nii was 0.025311 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_rhand_cortex.dscalar.nii was 0.028941 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_rhand_cortex.dscalar.nii was 0.027227 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_bi_cortex.dscalar.nii was 0.028492 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_bi_cortex.dscalar.nii was 0.025843 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_rhand_cortex.dscalar.nii was 0.030655 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_rhand_cortex.dscalar.nii was 0.025899 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_lhand_cortex.dscalar.nii was 0.030971 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_lhand_cortex.dscalar.nii was 0.025612 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_bi_cortex.dscalar.nii was 0.034975 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_bi_cortex.dscalar.nii was 0.025552 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_rhand_cortex.dscalar.nii was 0.026393 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_lhand_cortex.dscalar.nii was 0.02529 seconds.\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CompletedProcess(args=['wb_view', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_bi_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_bi_cortex.dscalar.nii'], returncode=0)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "glm = 'single'\n",
+    "glm = 1\n",
     "import subprocess\n",
     "surfPy_dir = '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh'\n",
     "\n",
-    "names = ['lhand', 'rhand', 'bi', 'mvpa_rhand', 'mvpa_lhand', 'mvpa_bi']#, 'marginal_rhand', 'marginal_lhand']\n",
+    "names = ['lhand', 'rhand', 'bi', 'mvpa_rhand', 'mvpa_lhand', 'mvpa_bi', 'marginal_rhand', 'marginal_lhand']\n",
     "hem = ['L', 'R']\n",
     "\n",
     "# add paths:\n",
@@ -426,14 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "5009b2f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "glm = 1\n",
-    "participants = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['lhand','rhand','bi','mvpa_lhand', 'mvpa_rhand', 'mvpa_bi']#, 'marginal_lhand', 'marginal_rhand']\n",
+    "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
+    "searchlight_names = ['mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
     "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
@@ -457,7 +453,9 @@
     "\n",
     "        # Get data\n",
     "        left_data = left_img.get_fdata()\n",
+    "        left_data = np.sign(left_data) * np.sqrt(np.abs(left_data))  # retain sign\n",
     "        right_data = right_img.get_fdata()\n",
+    "        right_data = np.sign(right_data) * np.sqrt(np.abs(right_data))  # retain sign\n",
     "\n",
     "        # Concatenate BrainModelAxis (spatial axis)\n",
     "        combined_brain_axis = left_brain_axis + right_brain_axis\n",
@@ -487,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "ca66579b",
    "metadata": {},
    "outputs": [
@@ -495,17 +493,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Concatenating 14 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 14\n",
-      "Final data shape: (14, 64984)\n"
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_40501/2551188158.py:49: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_16867/4057791086.py:49: RuntimeWarning: divide by zero encountered in divide\n",
       "  tstats = mean_data / (std_data / np.sqrt(DoF+1))\n"
      ]
     },
@@ -513,33 +511,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Concatenating 14 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 14\n",
-      "Final data shape: (14, 64984)\n",
-      "Concatenating 14 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 14\n",
-      "Final data shape: (14, 64984)\n",
-      "Concatenating 14 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 14\n",
-      "Final data shape: (14, 64984)\n",
-      "Concatenating 14 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 14\n",
-      "Final data shape: (14, 64984)\n",
-      "Concatenating 14 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 14\n",
-      "Final data shape: (14, 64984)\n"
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n",
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n",
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n",
+      "Concatenating 12 subjects...\n",
+      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
+      "Combined scalar axis size: 12\n",
+      "Final data shape: (12, 64984)\n"
      ]
     }
    ],
    "source": [
     "glm = 1\n",
-    "participants = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['lhand','rhand','bi','mvpa_lhand', 'mvpa_rhand', 'mvpa_bi']#,'marginal_lhand', 'marginal_rhand']\n",
+    "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
+    "searchlight_names = ['mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
     "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
@@ -588,11 +582,16 @@
     "    tstats = mean_data / (std_data / np.sqrt(DoF+1))\n",
     "    tstats[~np.isfinite(tstats)] = np.nan # handle voxels with no data\n",
     "\n",
+    "    # significant mask at abs(tstat) > 1.8:\n",
+    "    p05_mask = np.abs(tstats) > 1.8\n",
+    "    mean_data_significant = mean_data * p05_mask\n",
+    "\n",
     "    # add to the data:\n",
-    "    combined_data = np.concatenate([combined_data, mean_data, tstats, DoF], axis=0)\n",
+    "    combined_data = np.concatenate([combined_data, mean_data, mean_data_significant, tstats, DoF], axis=0)\n",
     "\n",
     "    # update the scalar axis:\n",
     "    combined_scalar_axis = combined_scalar_axis + cifti2.cifti2_axes.ScalarAxis(name=['mean'])\n",
+    "    combined_scalar_axis = combined_scalar_axis + cifti2.ScalarAxis(name=['mean_p05'])\n",
     "    combined_scalar_axis = combined_scalar_axis + cifti2.ScalarAxis(name=['tstat'])\n",
     "    combined_scalar_axis = combined_scalar_axis + cifti2.ScalarAxis(name=['DoF'])\n",
     "\n",
