--- a/notebooks_mri/PCM_unimanual.ipynb
+++ b/notebooks_mri/PCM_unimanual.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0f4386d6",
    "metadata": {},
    "outputs": [
@@ -549,6 +549,17 @@
       "Fitting group cross model 5\n",
       "Fitting group cross model 6\n",
       "Fitting group cross model 7\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 157\u001b[39m\n\u001b[32m    152\u001b[39m results = {\n\u001b[32m    153\u001b[39m             \u001b[33m'\u001b[39m\u001b[33mT_gr\u001b[39m\u001b[33m'\u001b[39m: T_gr, \u001b[33m'\u001b[39m\u001b[33mtheta_gr\u001b[39m\u001b[33m'\u001b[39m: theta_gr,\n\u001b[32m    154\u001b[39m             \u001b[33m'\u001b[39m\u001b[33mT_cv\u001b[39m\u001b[33m'\u001b[39m: T_cv, \u001b[33m'\u001b[39m\u001b[33mtheta_cv\u001b[39m\u001b[33m'\u001b[39m: theta_cv\n\u001b[32m    155\u001b[39m             }\n\u001b[32m    156\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os.path.join(analysisDir, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mPCM_unimanual_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mregion\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.pkl\u001b[39m\u001b[33m'\u001b[39m), \u001b[33m'\u001b[39m\u001b[33mwb\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m--> \u001b[39m\u001b[32m157\u001b[39m     \u001b[43mpickle\u001b[49m.dump(results, f)\n",
+      "\u001b[31mNameError\u001b[39m: name 'pickle' is not defined"
      ]
     }
    ],
